--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -50,10 +50,8 @@ err <- read_rds(get_mi_data_path("error_data", ext = "rds", test_output = test_o
                                 "Unknown",
                                 str_sub(ijb, 11, -1)))
 ```
-<!-- delete all of above when finished tetsing -->
+<!-- delete all of above when finished testing -->
 
-All Referrals
-=================================================
 
 ```{r data setup, include=FALSE}
 # to be automated based on whether current year is complete or not??
@@ -74,13 +72,29 @@ pds_all %<>% rename(geog = ijb)
 
 pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
 
-pds_all %<>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
+pds_all_totals <- pds_all %<>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
+
+pds_ijb %<>% rename(geog = ijb) 
+
+pds_ijb$geog<- factor(pds_ijb$geog, levels = unique(pds_ijb$geog))
+
+pds_ijb %<>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
+
+pds_hb %<>% rename(geog = ijb) 
+
+pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
+
+pds_hb %<>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
+
+pds_scot %<>% rename(geog = ijb) 
+
+pds_scot %<>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
 
 #prepare population rate data
 pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/pop_data.rds") %>% 
   filter(age_grp == "All", sex == "All") %>% select(geog, year, pop_est)
 
-pds_all_cal_year <- pds_all %>% 
+pds_all_cal_year <- pds_all_totals %>% 
   mutate(year = as.numeric(substr(fy, 1, 4)))
 
 pds_all_rates <- left_join(pds_all_cal_year, pop_data) %>% select(geog, fy, total_referrals, pop_est) %>% 
@@ -90,8 +104,9 @@ pds_scot_rates <- pds_all_rates %>% filter(geog == "Scotland")
 
 pds_ijb_rates <- pds_all_rates %>% filter(geog != "Scotland", !grepl("NHS", geog))
 
-# assigns data to filter_select in sidebar
-pds_trends_data <- SharedData$new(pds_all)
+# assigns data to filter_selects
+pds_trends_data_ijb <- SharedData$new(pds_ijb)
+pds_trends_data_hb <- SharedData$new(pds_hb)
 pds_trends_pop_data <- SharedData$new(pds_all_rates)
 pds_ijb_pop_data <- SharedData$new(pds_ijb_rates, group = "group1")
 pds_scot_pop_data <- SharedData$new(pds_scot_rates, group = "group1")
@@ -99,9 +114,12 @@ pds_scot_pop_data <- SharedData$new(pds_scot_rates, group = "group1")
  
 ```
 
-
+All Referrals - Trends & Rates
+=================================================
 Sidebar {.sidebar}
 -----------------------------------------------------------------------
+
+<br>
 
 ### All Referrals - Trend
 ***
@@ -116,48 +134,8 @@ Sidebar {.sidebar}
 
 <ul>
   <li>[All Referrals - Trend](#all-referrals)</li>
-  <li>[All Referrals per 10,000 population - Trend](#pop-trend)</li>
-  <li>[All Referrals per 10,000 population - by Integration Authority Area](#pop-ijb)</li>
+  <li>[All Referrals per 10,000 population](#pop-trend)</li>
 </ul>
-
-***
-
-```{r dropdown}
-data_filter_hb_ijb <- filter_select(id = "trend_filter",
-                                    label = "Select Health Board or Integration Authority Area:",
-                                    group = ~geog,
-                                    sharedData = pds_trends_data
-                                   )
-data_filter_hb_ijb
-
-```
-
-```{js }
-function filter_default() {
-    document.getElementById("trend_filter").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("trend_filter").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-   document.getElementById("trend_filter_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("trend_filter_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-      document.getElementById("trend_filter_year").getElementsByClassName("selectized") 
-  [0].selectize.setValue("2023/24", false);
-
-  document.getElementById("trend_filter_year").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  
-  }
-  
-  window.onload = filter_default;
-
-```
 
 ***
 
@@ -172,18 +150,61 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {data-height=600}
+Row {.tabset data-height=600}
 ----------------------------------------------------------------------
 
-### **Number of Individuals referred to Post-Diagnostic Support by Financial Year** {data-width=800}
+### **Scotland**
 
 ```{r trend-plot}
 
-trends_plot <- plot_trend(pds_trends_data, total_referrals)
+trends_plot <- plot_trend(pds_scot, total_referrals)
 trends_plot
 
 ```
 
+### **Health Boards**
+<div>
+```{r dropdown-hb, fig.width=2, fig.align='left'}
+data_filter_hb <- filter_select(id = "trend_filter_hb",
+                                    label = "Select Health Board:",
+                                    group = ~geog,
+                                    sharedData = pds_trends_data_hb
+                                   )
+data_filter_hb
+
+```
+</div>
+
+<div class="trend-plot-hb">
+```{r trend-plot-hb, fig.height=5}
+
+trends_plot_hb <- plot_trend(pds_trends_data_hb, total_referrals)
+trends_plot_hb
+
+```
+</div>
+
+
+### **Integration Authority Areas**
+
+```{r dropdown-ijb, fig.height=5}
+data_filter_ijb <- filter_select(id = "trend_filter_ijb",
+                                    label = "Select Integration Authority Area:",
+                                    group = ~geog,
+                                    sharedData = pds_trends_data_ijb
+                                   )
+data_filter_ijb
+
+```
+
+<div>
+```{r trend-plot-ijb, fig.height=5}
+
+trends_plot_ijb <- plot_trend(pds_trends_data_ijb, total_referrals)
+trends_plot_ijb
+
+```
+</div>
 
 Row {.tabset data-height=750}
 ----------------------------------------------------------------------
@@ -231,7 +252,9 @@ Pop Trend {.hidden}
 Sidebar {.sidebar}
 -----------------------------------------------------------------------
 
-### All Referrals per 10,000 population - Trend 
+<br>
+
+### All Referrals per 10,000 population 
 
 ***
 
@@ -244,21 +267,8 @@ Sidebar {.sidebar}
 ***
 <ul>
   <li>[All Referrals - Trend](#all-referrals)</li>
-  <li>[All Referrals per 10,000 population - Trend](#pop-trend)</li>
-  <li>[All Referrals per 10,000 population - by Integration Authority Area](#pop-ijb)</li>
+  <li>[All Referrals per 10,000 population](#pop-trend)</li>
 </ul>
-
-***
-
-```{r dropdown-pop}
-data_filter_hb_ijb_pop <- filter_select(id = "trend_filter_pop",
-                                    label = "Select Health Board or Integration Authority Area:",
-                                    group = ~geog,
-                                    sharedData = pds_trends_pop_data
-                                   )
-data_filter_hb_ijb_pop
-
-```
 
 ***
 
@@ -273,18 +283,59 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {data-height=600}
+Row {.tabset data-height=600}
 ----------------------------------------------------------------------
 
-### **Number of Individuals referred to Post-Diagnostic Support per 10,000 population by Financial Year** {data-width=800}
+### **Trend by Financial Year**
 
-```{r trend-plot-pop}
+```{r dropdown-pop}
+data_filter_hb_ijb_pop <- filter_select(id = "trend_filter_pop",
+                                    label = "Select Health Board or Integration Authority Area:",
+                                    group = ~geog,
+                                    sharedData = pds_trends_pop_data
+                                   )
+data_filter_hb_ijb_pop
+
+```
+
+<div>
+```{r trend-plot-pop, fig.height=5}
 
  trends_pop_plot <- plot_trend(pds_trends_pop_data, pop_rate_10000)
  trends_pop_plot
 
 ```
+</div>
 
+### **Integration Authority Areas**
+
+```{r dropdown-pop-iaa}
+data_filter_year <- filter_select(id = "trend_filter_year",
+                                    label = "Select Financial Year:",
+                                    group = ~fy,
+                                    sharedData = pds_ijb_pop_data,
+                                    multiple = FALSE
+                                   )
+data_filter_year
+
+#this is a hidden dummy filter that is grouped with filter above so that scotland data is filtered to the same year as ijbs
+data_filter_year_2 <- filter_select(id = "trend_filter_year_2",
+                                    label = "Select Financial Year:",
+                                    group = ~fy,
+                                    sharedData = pds_scot_pop_data,
+                                    multiple = FALSE
+                                   )
+
+```
+
+<div>
+```{r plot-ijb-pop, fig.height=5}
+
+ ijb_rates_plot <- plot_bar_pop_rate(pds_ijb_pop_data, pds_scot_pop_data)
+ ijb_rates_plot
+
+```
+</div>
 
 Row {.tabset data-height=750}
 ----------------------------------------------------------------------
@@ -325,94 +376,35 @@ pds_all_rates %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>%
 
 ```
 
-Pop IJB {.hidden}
-=====================================
-Sidebar {.sidebar}
------------------------------------------------------------------------
+```{js }
+function filter_default() {
+    document.getElementById("trend_filter_hb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("NHS Ayrshire & Arran", false);
 
-### All Referrals per 10,000 population - by Integration Authority Area
+  document.getElementById("trend_filter_hb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+   document.getElementById("trend_filter_ijb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("Aberdeen City", false);
 
-***
+  document.getElementById("trend_filter_ijb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+ 
+   document.getElementById("trend_filter_pop").getElementsByClassName("selectized") 
+  [0].selectize.setValue("Scotland", false);
 
-<font size="2"> 
-<span style="color:red"> 
-**MANAGEMENT INFORMATION ONLY:** <br>
-**NOT FOR ONWARD DISTRIBUTION**
-</span> </font>
+  document.getElementById("trend_filter_pop").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("trend_filter_year").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
 
-
-***
-<ul>
-  <li>[All Referrals - Trend](#all-referrals)</li>
-  <li>[All Referrals per 10,000 population - Trend](#pop-trend)</li>
-  <li>[All Referrals per 10,000 population - by Integration Authority Area](#pop-ijb)</li>
-</ul>
-
-***
-
-```{r dropdown-pop-iaa}
-data_filter_year <- filter_select(id = "trend_filter_year",
-                                    label = "Select Financial Year:",
-                                    group = ~fy,
-                                    sharedData = pds_ijb_pop_data,
-                                    multiple = FALSE
-                                   )
-data_filter_year
-
-#this is a hidden dummy filter that is grouped with filter above so that scotland data is filtered to the same year as ijbs
-data_filter_year_2 <- filter_select(id = "trend_filter_year_2",
-                                    label = "Select Financial Year:",
-                                    group = ~fy,
-                                    sharedData = pds_scot_pop_data,
-                                    multiple = FALSE
-                                   )
-
-```
-
-***
-
-Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
-
-Row
-----------------------------------------------------------------------
-
-### **Note**
-
-**Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
-
-
-Row {data-height=650}
-----------------------------------------------------------------------
-
-### **Number of Individuals referred to Post-Diagnostic Support per 10,000 population by Integration Authority Area** {data-width=800}
-
-```{r plot-ijb-pop}
-
- ijb_rates_plot <- plot_bar_pop_rate(pds_ijb_pop_data, pds_scot_pop_data)
- ijb_rates_plot
-
-```
-
-
-Row {data-height=750}
-----------------------------------------------------------------------
-
-### 
-
-```{r table-ijb-pop}
-
-# pds_all %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>%
-#             mutate(total_referrals = format(total_referrals, big.mark = ",")) %>%
-#             pivot_wider(names_from = fy, values_from = total_referrals) %>%
-#             rename(`Integration Authority Area` = geog) %>%
-#             kable(align = c("l", rep("r", length(unique(pds$fy))))) %>%
-#             kable_styling(full_width = FALSE) %>%
-#             column_spec(1, bold = TRUE) %>%
-#   # Add header above table
-#             add_header_above(
-#                        c(" " = 1,
-#                          "Financial Year of Diagnosis" = length(unique(pds$fy)))) %>%
-#             scroll_box(height = "740px")
-
+  document.getElementById("trend_filter_year").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  
+  }
+  
+  window.onload = filter_default;
 
 ```
