Adds table to Age proportion trend tab

--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -106,7 +106,7 @@ pds_all_age <- pds_all %<>% group_by(geog, fy, age_grp) %>%
 # pds_ijb_rates <- pds_all_rates %>% filter(geog != "Scotland", !grepl("NHS", geog))
 
 # assigns data to filter_selects
-pds_age_data <- SharedData$new(pds_all_age)
+pds_age_data <- SharedData$new(pds_all_age, key = ~geog, group = "trend_prop")
 # pds_trends_data_hb <- SharedData$new(pds_hb)
 # pds_trends_pop_data <- SharedData$new(pds_all_rates)
 # pds_ijb_pop_data <- SharedData$new(pds_ijb_rates, group = "group1")
@@ -255,6 +255,8 @@ Age Proportions {.hidden}
 Sidebar {.sidebar}
 -----------------------------------------------------------------------
 
+<br>
+
 ### Age Groups - Proportions 
 
 ***
@@ -287,11 +289,10 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {.tabset data-height=600}
+Row {.tabset data-height=900}
 ----------------------------------------------------------------------
 
 ### **Trend by Financial Year**
-
 ```{r dropdown-prop-age}
 
 data_filter_age_prop <- filter_select(id = "trend_filter_age_prop",
@@ -305,7 +306,7 @@ data_filter_age_prop
 
 ```
 
-<div>
+
 ```{r plot-prop-age}
 bscols(widths = c(10,2),
   plot_trend_prop(pds_age_data),
@@ -313,7 +314,35 @@ bscols(widths = c(10,2),
 )
 
 ```
-</div>
+
+
+```{r trend-table-prop-age}
+
+pds_prop_table_data <- pds_all_age %>% group_by(geog, fy) %>% 
+  mutate(perc_referrals = paste0(round((total_referrals/sum(total_referrals))*100,0),"%")) %>% ungroup() %>% 
+  select(-total_referrals) %>% 
+  pivot_wider(names_from = fy, values_from = perc_referrals) %>%
+             rename(`Age Group` = age_grp)
+pds_prop_table_data[is.na(pds_prop_table_data)] <- "0%"
+
+
+pds_prop_table <- SharedData$new(pds_prop_table_data, key = ~geog, group = "trend_prop")
+
+
+DT::datatable(pds_prop_table, rownames = FALSE,
+              options = list(pageLength = 10,
+                             scrollX = FALSE,
+                             scrollY = FALSE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = FALSE, targets = 0),
+                                               list(className = 'dt-right', targets = 2:10),
+                                               list(width = '10px', targets = 1:10)
+                                               )))
+
+
+
+```
 
 ### **Integration Authority Areas**
 
@@ -344,47 +373,6 @@ bscols(widths = c(10,2),
 
 ```
 </div>
-
-Row {.tabset data-height=750}
-----------------------------------------------------------------------
-
-### **Health Boards**
-
-```{r trend-table-hb-prop-age}
-
-# pds_all_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
-#             pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
-#             rename(`Health Board` = geog) %>%
-#             kable(align = c("l", rep("r", length(unique(pds$fy))))) %>%
-#             kable_styling(full_width = FALSE) %>%
-#             column_spec(1, bold = TRUE) %>%
-#   # Add header above table
-#             add_header_above(
-#                     c(" " = 1,
-#                      "Financial Year of Diagnosis" = length(unique(pds$fy))))
-
-```
-
-### **Integration Authority Areas**
-
-```{r trend-table-ijb-prop-age}
-
-# pds_all_rates %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>%
-#             pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
-#             rename(`Integration Authority Area` = geog) %>%
-#             kable(align = c("l", rep("r", length(unique(pds$fy))))) %>%
-#             kable_styling(full_width = FALSE) %>%
-#             column_spec(1, bold = TRUE) %>%
-#   # Add header above table
-#             add_header_above(
-#                        c(" " = 1,
-#                          "Financial Year of Diagnosis" = length(unique(pds$fy)))) %>%
-#             scroll_box(height = "740px")
-
-
-```
-
-
 
 Age Rates {.hidden}
 =====================================
@@ -552,16 +540,41 @@ Deprivation (SIMD) {data-navmenu="Demographics"}
 =================================================
 
 ```{js }
-function filter_default_age() {
-    document.getElementById("trend_filter_age_prop").getElementsByClassName("selectized") 
+function filter_default() {
+
+  document.getElementById("trend_filter_age_prop").getElementsByClassName("selectized") 
   [0].selectize.setValue("Scotland", false);
 
   document.getElementById("trend_filter_age_prop").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
+    document.getElementById("trend_filter_hb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("NHS Ayrshire & Arran", false);
+
+  document.getElementById("trend_filter_hb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+   document.getElementById("trend_filter_ijb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("Aberdeen City", false);
+
+  document.getElementById("trend_filter_ijb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+ 
+   document.getElementById("trend_filter_pop").getElementsByClassName("selectized") 
+  [0].selectize.setValue("Scotland", false);
+
+  document.getElementById("trend_filter_pop").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("trend_filter_year").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("trend_filter_year").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
   }
   
-  window.onload = filter_default_age;
+  window.onload = filter_default;
 
 ```
 
